Update code styles

--- a/source/assets/stylesheets/structures/_article.sass
+++ b/source/assets/stylesheets/structures/_article.sass
@@ -54,6 +54,9 @@
     @extend %link--underlined
 
   code, kbd
+    font-family: $b-fontFamily-mono
+    font-size: 90%
+    letter-spacing: -0.025ch
 
 // -------------------------------------
 //   Scaffolding
