--- a/source/index.haml
+++ b/source/index.haml
@@ -13,7 +13,7 @@ title: 'Web Typography'
     .mv-g.mv-g--centered
       .mv-g-b.mv-g-b--3of5_m
 
-        %h1 The Blog
+        %h1.mbl--m The Blog
 
         %h2 Latest post
 
