--- a/source/shared/_head.haml
+++ b/source/shared/_head.haml
@@ -1,6 +1,7 @@
 %head
   %meta{ name: 'viewport', content: 'width=device-width, initial-scale=1.0' }
   %link{ rel: 'preconnect', href: 'https://use.typekit.net' }
+  %link{ rel: 'preload', href: asset_path(:fonts, 'robur-regular.woff2'), as: 'font', type: 'font/woff2', crossorigin: true }
 
   %title= page_title
 
