--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -208,6 +208,18 @@
 //   Text
 // -------------------------------------
 
+// ----- Align ----- //
+
+.tac
+  text-align: center
+
+// Responsive
+
++respond-to($g-l)
+
+  .tac_l
+    text-align: center
+
 // ----- Size ----- //
 
 .tss
