--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -222,6 +222,12 @@
 
 // ----- Size ----- //
 
+.tsb
+  font-size: $b-fontSize
+
+  +fontless
+    font-size: $b-fontSize-fallback
+
 .tss
   font-size: $b-fontSize-s
 
