--- a/source/about.haml
+++ b/source/about.haml
@@ -18,43 +18,48 @@ title: 'About'
 
       .mv-g-b.mv-g-b--4of5_m.mv-g-b--3of5_l
 
-        .article
-          :markdown
+        %ul.list.list--bulleted.mtl
+          %li.list-item
+            %h2.mbs.tsb Did you really regift that Polaroid camera?
 
-            Are you available for hire?
-            ---------------------------
+            %p.mbf
+              It wasn’t my proudest moment, but she’s getting a lot of milage
+              out of it. I’d say that’s a net win for the world. You’re
+              welcome, Earth.
 
-            Nope, I'm keeping busy day to day over at ye olde
-            #{ link_to 'Code School', data.links.codeschool }.
+          %li.list-item
+            %h2.mbs.tsb Want to make a microsite for my typeface?
 
-            Is it true I can talk to you on Twitter?
-            ----------------------------------------
+            %p.mbf
+              That sounds awesome. Send me a direct message on
+              #{ link_to 'Twitter', links.twitter, class: 'link link--underlined' }
+              and let’s get things started.
 
-            You bet &mdash; I'm #{ link_to '@johndjameson', data.links.twitter }
-            over there. If you have feedback on an article or suggestions for a
-            future topic, Twitter's the best place to start a conversation with me.
+          %li.list-item
+            %h2.mbs.tsb How many Star Wars audiobooks do you own?
 
-            How many Star Wars audiobooks do you own?
-            -----------------------------------------
+            %p.mbf
+              Five so far, and they're all on Sith Lords. It feels strange
+              getting back into Star&nbsp;Wars after the whole prequel fiasco,
+              but listening to the audiobooks has been <em>a lot</em> of fun.
 
-            Five so far, and they're all on Sith Lords. It feels strange getting
-            back into Star&nbsp;Wars after the whole prequel fiasco, but listening
-            to the audiobooks has been _a lot_ of fun.
+          %li.list-item
+            %h2.mbs.tsb What do you think of&thinsp;&hellip;
 
-            What do you think of&thinsp;&hellip;
-            ------------------------------------
+            %p.mbf It depends.
 
-            It depends.
+          %li.list-item
+            %h2.mbs.tsb Nobody really asked these questions, did they?
 
-            Nobody really asked these questions, did they?
-            ----------------------------------------------
+            %p.mbf
+              Hey, I remember you &mdash; you're the one who spoiled Santa
+              Claus for Marielle Molina in the 2nd grade!
 
-            Hey, I remember you &mdash; you're the one who spoiled Santa Claus for
-            Marielle Molina in the 2nd grade!
+          %li.list-item
+            %h2.mbs.tsb
+              Anything else I should know about you?
 
-            Anything else I should know about you?
-            --------------------------------------
-
-            I bought a lenticular poster of a bald eagle to hang on my bedroom
-            wall. It is, without a doubt, the _coolest thing_ I have ever owned.
-            Shout-out to kitschy museum gift shops.
+            %p.mbf
+              I bought a lenticular poster of a bald eagle to hang on my
+              bedroom wall. It is, without a doubt, the <em>coolest thing</em>
+              I have ever owned. Big shout-out to kitschy museum gift shops.
