Add some red :O

--- a/source/assets/stylesheets/structures/_link.sass
+++ b/source/assets/stylesheets/structures/_link.sass
@@ -31,4 +31,5 @@
   text-shadow: -$shadow-offset -$shadow-offset 0 $c-background, $shadow-offset -$shadow-offset 0 $c-background, -$shadow-offset $shadow-offset 0 $c-background, $shadow-offset $shadow-offset 0 $c-background
 
   +state
-    background-image: linear-gradient(to bottom, transparent 25%, currentColor 25%)
+    background-image: linear-gradient(to bottom, transparent 25%, $red 25%)
+    color: $red
