--- a/source/assets/stylesheets/structures/_manicule.sass
+++ b/source/assets/stylesheets/structures/_manicule.sass
@@ -7,13 +7,16 @@
 //   Template (Haml)
 // -------------------------------------
 //
-// .manicule
+// %img.manicule
 //
 // *************************************
 
 .manicule
+  height: auto
   position: absolute
   right: calc(100% + #{$b-space-xs})
+  top: -3px
+  width: 70px
 
 // -------------------------------------
 //   Context
