Update About page

--- a/source/about.haml
+++ b/source/about.haml
@@ -39,12 +39,13 @@ title: 'About'
             %h2.mbs.tsb How many Star Wars audiobooks do you own?
 
             %p.mbf
-              Five so far, and they're all on Sith Lords. It feels strange
-              getting back into Star&nbsp;Wars after the whole prequel fiasco,
-              but listening to the audiobooks has been <em>a lot</em> of fun.
+              Six so far, and they're almost all on Sith Lords. It feels
+              strange getting back into Star&nbsp;Wars after the whole prequel
+              fiasco, but listening to the audiobooks has been <em>a lot</em>
+              of fun.
 
           %li.list-item
-            %h2.mbs.tsb What do you think of&thinsp;&hellip;
+            %h2.mbs.tsb What do you think of&thinsp;…
 
             %p.mbf It depends.
 
@@ -56,10 +57,14 @@ title: 'About'
               Claus for Marielle Molina in the 2nd grade!
 
           %li.list-item
-            %h2.mbs.tsb
-              Anything else I should know about you?
+            %h2.mbs.tsb Anything else I should know about you?
 
             %p.mbf
               I bought a lenticular poster of a bald eagle to hang on my
               bedroom wall. It is, without a doubt, the <em>coolest thing</em>
               I have ever owned. Big shout-out to kitschy museum gift shops.
+
+          %li.list-item
+            %h2.mbs.tsb How late were you up last night?
+
+            %p.mbf Zzz…
