Update code styles

--- a/source/assets/stylesheets/structures/_article.sass
+++ b/source/assets/stylesheets/structures/_article.sass
@@ -54,9 +54,12 @@
     @extend %link--underlined
 
   code, kbd
+    background: #efeeec
     font-family: $b-fontFamily-mono
     font-size: 90%
     letter-spacing: -0.025ch
+    padding-left: 0.25ch
+    padding-right: 0.25ch
 
 // -------------------------------------
 //   Scaffolding
