Lighten code background

--- a/source/assets/stylesheets/structures/_article.sass
+++ b/source/assets/stylesheets/structures/_article.sass
@@ -54,7 +54,7 @@
     @extend %link--underlined
 
   code, kbd
-    background: #efeeec
+    background: #f3f3f1
     font-family: $b-fontFamily-mono
     font-size: 90%
     letter-spacing: -0.025ch
