--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -54,14 +54,18 @@ h4, .h4
     margin-bottom: $b-space
 
 h1, .h1
-  font-family: $b-fontFamily-serif
   font-size: 30px
-  font-weight: 400
   line-height: 1.12
   margin-bottom: $b-space-s
 
+  +fontless
+    font-size: 25px
+
   +respond-to($g-m)
     font-size: 50px
+
+    +fontless
+      font-size: 42px
 
   +respond-to($g-l)
     margin-bottom: $b-space
