Update headings to use Heading module

--- a/source/about.haml
+++ b/source/about.haml
@@ -20,7 +20,7 @@ title: 'About'
 
         %ul.list.list--bulleted.mtl
           %li.list-item
-            %h2.mbs.tsb Did you really regift that Polaroid camera?
+            %h2.heading.heading--2.mbs.tsb Did you really regift that Polaroid camera?
 
             %p.mbf
               It wasn’t my proudest moment, but she’s getting a lot of milage
@@ -28,7 +28,7 @@ title: 'About'
               welcome, Earth.
 
           %li.list-item
-            %h2.mbs.tsb Want to make a microsite for my typeface?
+            %h2.heading.heading--2.mbs.tsb Want to make a microsite for my typeface?
 
             %p.mbf
               That sounds awesome. Send me a direct message on
@@ -36,7 +36,7 @@ title: 'About'
               and let’s get things started.
 
           %li.list-item
-            %h2.mbs.tsb How many Star Wars audiobooks do you own?
+            %h2.heading.heading--2.mbs.tsb How many Star Wars audiobooks do you own?
 
             %p.mbf
               Six so far, and they're almost all on Sith Lords. It feels
@@ -45,19 +45,19 @@ title: 'About'
               of fun.
 
           %li.list-item
-            %h2.mbs.tsb What do you think of&thinsp;…
+            %h2.heading.heading--2.mbs.tsb What do you think of&thinsp;…
 
             %p.mbf It depends.
 
           %li.list-item
-            %h2.mbs.tsb Nobody really asked these questions, did they?
+            %h2.heading.heading--2.mbs.tsb Nobody really asked these questions, did they?
 
             %p.mbf
               Hey, I remember you &mdash; you're the one who spoiled Santa
               Claus for Marielle Molina in the 2nd grade!
 
           %li.list-item
-            %h2.mbs.tsb Anything else I should know about you?
+            %h2.heading.heading--2.mbs.tsb Anything else I should know about you?
 
             %p.mbf
               I bought a lenticular poster of a bald eagle to hang on my
@@ -65,6 +65,6 @@ title: 'About'
               I have ever owned. Big shout-out to kitschy museum gift shops.
 
           %li.list-item
-            %h2.mbs.tsb How late were you up last night?
+            %h2.heading.heading--2.mbs.tsb How late were you up last night?
 
             %p.mbf Zzz…
