--- a/source/assets/stylesheets/foundation/_base.sass
+++ b/source/assets/stylesheets/foundation/_base.sass
@@ -45,42 +45,9 @@ h1, .h1,
 h2, .h2,
 h3, .h3,
 h4, .h4
-  font-weight: 700
-  line-height: 1.325
-  margin-bottom: $b-space-s
-  margin-top: 0
-
-  +respond-to($g-m)
-    margin-bottom: $b-space
-
-h1, .h1
-  font-size: 30px
-  line-height: 1.12
-  margin-bottom: $b-space-s
-
-  +fontless
-    font-size: 25px
-
-  +respond-to($g-m)
-    font-size: 50px
-
-    +fontless
-      font-size: 42px
-
-  +respond-to($g-l)
-    margin-bottom: $b-space
-
-h2, .h2
-  font-size: $b-fontSize-h2 * 0.8
-
-  +respond-to($g-m)
-    font-size: $b-fontSize-h2
-
-  +fontless
-    font-size: $b-fontSize-h2-fallback
-
-h3, .h3
-  font-size: inherit
+  font-weight: inherit
+  line-height: inherit
+  margin: 0
 
 // -------------------------------------
 //   Inline Content
