--- a/source/assets/stylesheets/structures/_article.sass
+++ b/source/assets/stylesheets/structures/_article.sass
@@ -18,13 +18,15 @@
   // -------------------------------------
 
   h2
+    @extend .heading
+    @extend .heading--2
     margin-top: $b-space
 
     +respond-to($g-l)
       margin-top: $b-space-l
 
   h3
-    font-size: inherit
+    @extend .heading
     margin-top: $b-space
 
   ul, ol
