Update posts to use title module and Robur

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -43,8 +43,8 @@ $b-border: $b-borderWidth $b-borderStyle $c-border
 
 $b-fontFamily: 'cronos-pro', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
 $b-fontFamily-fallback: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
-$b-fontFamily-serif: 'Robur Web', 'Georgia', serif
 $b-fontFamily-mono: 'Courier', monospace
+$b-fontFamily-robur: 'Robur Web', 'Georgia', serif
 
 // ----- Line Height ----- //
 
