--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -4,11 +4,13 @@
 
   %article.row.article.js-has-headingLink{ role: 'article' }
     %section.cell.well.well--l
+      .mv-g.mv-g--centered_l
+        .mv-g-b.mv-g-b--4of5_m.mv-g-b--5of5_l
+
+          %h1.title.tac_l= page.allow_widow ? page.title : prevent_widow(page.title)
 
       .mv-g.mv-g--centered_l
         .mv-g-b.mv-g-b--4of5_m.mv-g-b--3of5_l
-
-          %h1= page.allow_widow ? page.title : prevent_widow(page.title)
 
           .lead.mbl
             :markdown
