Remove headingLink functionality

--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -2,7 +2,7 @@
 
 = wrap_layout :layout do
 
-  %article.row.article.js-has-headingLink{ role: 'article' }
+  %article.row.article{ role: 'article' }
     %section.cell.well.well--l
       .mv-g.mv-g--centered_l
         .mv-g-b.mv-g-b--4of5_m.mv-g-b--5of5_l
