Improve fontless underline position

--- a/source/assets/stylesheets/structures/_link.sass
+++ b/source/assets/stylesheets/structures/_link.sass
@@ -33,3 +33,6 @@
   +state
     background-image: linear-gradient(to bottom, transparent 25%, $red 25%)
     color: $red
+
+  +fontless
+    background-position: 0 calc(100% - 0.125em)
