Add clearfix helper

--- a/source/assets/stylesheets/foundation/_helpers.sass
+++ b/source/assets/stylesheets/foundation/_helpers.sass
@@ -38,6 +38,15 @@
   user-select: none
   white-space: nowrap
 
+// ----- Clearix ----- //
+// -> Contain floats
+
+=clearfix
+  &::after
+    clear: both
+    content: ''
+    display: table
+
 // ----- List Reset ----- //
 // -> Removes default list styles
 
