Improve small type underline position

--- a/source/assets/stylesheets/structures/_link.sass
+++ b/source/assets/stylesheets/structures/_link.sass
@@ -36,3 +36,11 @@
 
   +fontless
     background-position: 0 calc(100% - 0.125em)
+
+// Small
+
+.link--underlined--s
+  background-position: 0 calc(100% - 0.175em)
+
+  +fontless
+    background-position: 0 calc(100% - 0.1em)
