--- a/source/index.haml
+++ b/source/index.haml
@@ -26,7 +26,7 @@ title: 'Web Typography'
 
           %p.mbs= latest_post.data.description
 
-          = link_to 'Continue Reading', latest_post, class: 'link link--underlined tss'
+          = link_to 'Continue Reading', latest_post, class: 'link link--underlined link--underlined--s tss'
 
         %h2.heading.heading--2 More posts
 
