--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -29,4 +29,4 @@
             .split-cell
               %time.tsi.tss= pretty_date(page.date)
             .split-cell
-              = link_to 'Subscribe via RSS', links.feedburner, class: 'link link--underlined tss'
+              = link_to 'Subscribe via RSS', links.feedburner, class: 'link link--underlined link--underlined--s tss'
