Right-align About link

--- a/source/shared/_header.haml
+++ b/source/shared/_header.haml
@@ -12,6 +12,6 @@
               %p.mbf.tss.tw7 John D. Jameson
               %p.mbf.tsi.tss Web typography and front-end development
 
-        .mv-g-b.mv-g-b--2of5.mv-g-b--1of5_m
+        .mv-g-b.mv-g-b--2of5.mv-g-b--1of5_m.tar
 
           = link_to 'About', '/about.html', class: 'tss tw7'
