--- a/source/shared/_header.haml
+++ b/source/shared/_header.haml
@@ -8,9 +8,10 @@
             = link_to '/index.html', class: 'db mrm' do
               = image_tag 'johndjameson-logo.svg', class: 'db logo'
 
-            %div.dn.db_m
-              %p.mbf.tss.tw7 John D. Jameson
-              %p.mbf.tsi.tss Web typography and front-end development
+            - unless current_page.path == 'index.html'
+              %div.dn.db_m
+                %p.mbf.tss.tw7 John D. Jameson
+                %p.mbf.tsi.tss Articles on web typography
 
         .mv-g-b.mv-g-b--2of5.mv-g-b--1of5_m.tar
 
