Update header border to span page width

--- a/source/shared/_header.haml
+++ b/source/shared/_header.haml
@@ -1,6 +1,6 @@
-%header.row{ role: 'banner' }
-  .cell.mt30px
-    .mv-header
+%header.mv-header{ role: 'banner' }
+  .row
+    .cell.well
       .mv-g.aife
         .mv-g-b.mv-g-b--3of5.mv-g-b--4of5_m
 
