--- a/source/assets/stylesheets/foundation/_helpers.sass
+++ b/source/assets/stylesheets/foundation/_helpers.sass
@@ -21,6 +21,14 @@
   @else
     @return ($target / $context) * 1em
 
+// ----- Strip Units ----- //
+// -> Remove number units
+//
+// $number - the value to strip units from
+
+@function strip-units($number)
+  @return $number / ($number * 0 + 1)
+
 // -------------------------------------
 //   Mixins
 // -------------------------------------
