Update Well module modifiers

--- a/source/assets/stylesheets/components/_well.sass
+++ b/source/assets/stylesheets/components/_well.sass
@@ -7,7 +7,7 @@
 //   Template (Haml)
 // -------------------------------------
 //
-// .well[l|xl m--xl]
+// .well[l]
 //   / ...
 //
 // *************************************
@@ -22,38 +22,12 @@
 
 // ----- Sizes ----- //
 
-// Small
-
-.well--s
-  margin-bottom: $b-space-s
-  margin-top: $b-space-s
-
-// Medium
-
-// Medium: Responsive
-
-+respond-to($g-m)
-
-  .well--m--m
-    margin-bottom: $b-space
-    margin-top: $b-space
-
 // Large
 
 .well--l
   margin-bottom: $b-space-l
   margin-top: $b-space-l
 
-// Extra Large
-
-.well--xl
-  margin-bottom: $b-space-xl
-  margin-top: $b-space-xl
-
-// Extra Large: Responive
-
-+respond-to($g-m)
-
-  .well--m--xl
-    margin-bottom: $b-space-xl
-    margin-top: $b-space-xl
+.well--4
+  margin-bottom: $b-space * 4
+  margin-top: $b-space * 4
