Update large font size variables

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -58,8 +58,8 @@ $b-fontSize-fallback: 18px
 $b-fontSize-s: 16px
 $b-fontSize-s-fallback: 14px
 
-$b-fontSize-s: 16px
-$b-fontSize-s-fallback: 14px
+$b-fontSize-l: 26px
+$b-fontSize-l-fallback: 22px
 
 // Headings
 
