Update home page description

--- a/source/index.haml
+++ b/source/index.haml
@@ -1,5 +1,5 @@
 ---
-description: 'Tutorials on web typography and front-end development.'
+description: 'John D. Jameson presents a bunch of blog posts on web typography.'
 title: 'Web Typography'
 ---
 
