Integrate partial hero styles

--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -13,6 +13,22 @@
   align-items: flex-end
 
 // -------------------------------------
+//   Background Color
+// -------------------------------------
+
+.bc-black
+  background-color: $black
+
+// -------------------------------------
+//   Color
+// -------------------------------------
+
+.c-red
+  color: $red
+.c-white
+  color: $white
+
+// -------------------------------------
 //   Display
 // -------------------------------------
 
@@ -235,6 +251,12 @@
 
   +fontless
     font-size: $b-fontSize-s-fallback
+
+.tsl
+  font-size: $b-fontSize-l
+
+  +fontless
+    font-size: $b-fontSize-l-fallback
 
 // ----- Style ----- //
 
