--- a/source/index.haml
+++ b/source/index.haml
@@ -8,12 +8,24 @@ title: 'Web Typography'
 
   latest_post = posts.first
 
+%section.row.bc-black.c-white
+  .cell.well.well--4
+
+    %p.mbf.tsi.tsl
+      John D. Jameson
+      %span.c-red (me)
+      presents a bunch of blog posts&nbsp;on
+
+    %h1.mv-heroTitle.js-heroTitle Web Typography
+
+    %p.mbf.tar.tsi.tsl
+      Because he’s a nerd
+      %span.c-red (and maybe you are,&nbsp;too)
+
 %section.row.mbm--m
   .cell.well.well--l
     .mv-g.mv-g--centered
       .mv-g-b.mv-g-b--3of5_m
-
-        %h1.heading.heading--1.mbl--m The Blog
 
         %h2.heading.heading--2 Latest post
 
