Update hero to use SVG

--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -269,3 +269,10 @@
   font-weight: 400
 .tw7
   font-weight: 700
+
+// -------------------------------------
+//   Width
+// -------------------------------------
+
+.w100p
+  width: 100%
