--- a/source/index.haml
+++ b/source/index.haml
@@ -11,12 +11,13 @@ title: 'Web Typography'
 %section.row.bc-black.c-white
   .cell.well.well--4
 
-    %p.mbf.tsi.tsl
+    %p.mbs.tsi.tsl
       John D. Jameson
       %span.c-red (me)
       presents a bunch of blog posts&nbsp;on
 
-    %h1.mv-heroTitle.js-heroTitle Web Typography
+    %h1.srt Web Typography
+    = image_tag 'web-typography.svg', class: 'mv-heroTitle mbs w100p'
 
     %p.mbf.tar.tsi.tsl
       Because he’s a nerd
