Improve hero responsiveness

--- a/source/assets/stylesheets/components/_well.sass
+++ b/source/assets/stylesheets/components/_well.sass
@@ -22,12 +22,22 @@
 
 // ----- Sizes ----- //
 
-// Large
-
 .well--l
   margin-bottom: $b-space-l
   margin-top: $b-space-l
 
+.well--2
+  margin-bottom: $b-space * 2
+  margin-top: $b-space * 2
+
 .well--4
   margin-bottom: $b-space * 4
   margin-top: $b-space * 4
+
+// Responsive
+
++respond-to($g-m)
+
+  .well--4_m
+    margin-bottom: $b-space * 4
+    margin-top: $b-space * 4
