--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -233,6 +233,13 @@
 
 // Responsive
 
++respond-to($g-m)
+
+  .tal_m
+    text-align: left
+  .tar_m
+    text-align: right
+
 +respond-to($g-l)
 
   .tac_l
