--- a/source/index.haml
+++ b/source/index.haml
@@ -9,19 +9,19 @@ title: 'Web Typography'
   latest_post = posts.first
 
 %section.row.bc-black.c-white
-  .cell.well.well--4
+  .cell.well.well--2.well--4_m
 
-    %p.mbs.tsi.tsl
+    %p.mbs.tsi.tsl.tac.tal_m
       John D. Jameson
       %span.c-red (me)
-      presents a bunch of blog posts&nbsp;on
+      presents a&nbsp;bunch&nbsp;of&nbsp;blog&nbsp;posts&nbsp;on
 
     %h1.srt Web Typography
     = image_tag 'web-typography.svg', class: 'mv-heroTitle mbs w100p'
 
-    %p.mbf.tar.tsi.tsl
+    %p.mbf.tac.tar_m.tsi.tsl
       Because he’s a nerd
-      %span.c-red (and maybe you are,&nbsp;too)
+      %span.c-red (and&nbsp;maybe&nbsp;you&nbsp;are,&nbsp;too)
 
 %section.row.mbm--m
   .cell.well.well--l
