Update header copy

--- a/source/shared/_header.haml
+++ b/source/shared/_header.haml
@@ -11,7 +11,7 @@
             - unless current_page.path == 'index.html'
               %div.dn.db_m
                 %p.mbf.tss.tw7 John D. Jameson
-                %p.mbf.tsi.tss Articles on web typography
+                %p.mbf.tsi.tss Blog posts on web typography
 
         .mv-g-b.mv-g-b--2of5.mv-g-b--1of5_m.tar
 
