Update Row module

--- a/source/assets/stylesheets/components/_row.sass
+++ b/source/assets/stylesheets/components/_row.sass
@@ -13,7 +13,8 @@
 // *************************************
 
 .row
-  overflow: hidden
+  border-bottom: 1px solid transparent
+  border-top: 1px solid transparent
   padding: 0 $b-space
 
   +respond-to($g-m)
