Randomize heroSticker messages

--- a/source/assets/stylesheets/structures/_heroSticker.sass
+++ b/source/assets/stylesheets/structures/_heroSticker.sass
@@ -22,7 +22,9 @@
   font-family: $b-fontFamily-robur
   font-size: 20px
   height: 130px
+  justify-content: center
   letter-spacing: 0.05em
+  line-height: 1.25
   margin: 0
   position: absolute
   right: -10px
