--- a/source/index.haml
+++ b/source/index.haml
@@ -26,7 +26,7 @@ title: 'Web Typography'
 .row
   .cell
     .has-heroSticker
-      %p.mv-heroSticker Font Stuff
+      %p.mv-heroSticker.mbf.js-heroSticker
 
 %section.row.mbm--m
   .cell.well.well--l
