--- a/source/index.haml
+++ b/source/index.haml
@@ -35,10 +35,12 @@ title: 'Web Typography'
 
         %h2.heading.heading--2 Latest post
 
-        .mbl
-          %p.has-manicule.mbf
-            = image_tag 'manicule.svg', alt: '', class: 'manicule dn db_m'
-            = link_to latest_post.data.title, latest_post, class: 'link link--underlined'
+        .has-manicule.mbl
+          .mv-manicule
+            = image_tag 'manicule.svg', alt: '', class: 'mv-manicule-image'
+            %p.mv-manicule-text New
+
+          = link_to latest_post.data.title, latest_post, class: 'link link--underlined'
 
           %time.db.mbs.tsi.tss= pretty_date(latest_post.data.date)
 
