Improve manicule responsiveness

--- a/source/index.haml
+++ b/source/index.haml
@@ -36,7 +36,7 @@ title: 'Web Typography'
         %h2.heading.heading--2 Latest post
 
         .has-manicule.mbl
-          .mv-manicule
+          .mv-manicule.dn_M
             = image_tag 'manicule.svg', alt: '', class: 'mv-manicule-image'
             %p.mv-manicule-text New
 
