Update About page copy

--- a/source/about.haml
+++ b/source/about.haml
@@ -23,9 +23,8 @@ title: 'About'
             %h2.heading.heading--2.mbs.tsb Did you really regift that Polaroid camera?
 
             %p.mbf
-              It wasn’t my proudest moment, but she’s getting a lot of milage
-              out of it. I’d say that’s a net win for the world. You’re
-              welcome, Earth.
+              It wasn’t my proudest moment, but she’s sure getting a lot of
+              milage out of it. I’d say that’s a net win.
 
           %li.list-item
             %h2.heading.heading--2.mbs.tsb Want to make a microsite for my typeface?
