Add sidebar link list

--- a/source/assets/stylesheets/components/_list.sass
+++ b/source/assets/stylesheets/components/_list.sass
@@ -47,6 +47,13 @@
       border-bottom: 0
       padding-bottom: 0
 
+// ----- Sizes ----- //
+
+.list--s
+
+  > .list-item
+    margin-bottom: $b-space-s
+
 // -------------------------------------
 //   Scaffolding
 // -------------------------------------
