--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -20,6 +20,13 @@
   background-color: $black
 
 // -------------------------------------
+//   Border
+// -------------------------------------
+
+.bdl2px
+  border-left: 2px solid $black
+
+// -------------------------------------
 //   Color
 // -------------------------------------
 
