Improve home page responsiveness

--- a/source/index.haml
+++ b/source/index.haml
@@ -35,7 +35,7 @@ title: 'Web Typography'
         %h2.heading.heading--2 Latest post
 
         .has-manicule.mbl
-          .mv-manicule.dn_M
+          .mv-manicule.dn_1180
             = image_tag 'manicule.svg', alt: '', class: 'mv-manicule-image'
             %p.mv-manicule-text New
 
@@ -60,14 +60,14 @@ title: 'Web Typography'
 
       .mv-g-b.mv-g-b--2of5_m
         .bdl2px.plm
-          %h2.heading.heading--3 Projects
+          %h2.heading.heading--3.mbs Projects
 
           %ul.list.list--s.mbm
             %li.list-item
               %p.mbf Type Studies
               = link_to 'typestudies.com', 'https://typestudies.com/', class: 'link link--underlined tss'
 
-          %h2.heading.heading--3 Cool People
+          %h2.heading.heading--3.mbs Cool People
 
           %ul.list.list--s
             %li.list-item
