--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -54,15 +54,15 @@
 
 // Responsive
 
-+respond-until($g-m)
-
-  .dn_M
-    display: none
-
 +respond-to($g-m)
 
   .db_m
     display: block
+
++respond-until(1180px)
+
+  .dn_1180
+    display: none
 
 // -------------------------------------
 //   Margins
