--- a/source/assets/stylesheets/structures/_title.sass
+++ b/source/assets/stylesheets/structures/_title.sass
@@ -12,6 +12,7 @@
 // *************************************
 
 .title
+  color: $red
   font-family: $b-fontFamily-robur
   font-size: 30px
   line-height: 1.12
