--- a/source/blog/2015-09-30-sidebearings-and-alignment.md.erb
+++ b/source/blog/2015-09-30-sidebearings-and-alignment.md.erb
@@ -2,7 +2,7 @@
 title: Sidebearings & Alignment
 type: post
 layout: article
-allow_widow: true
+allow_widow: false
 date: 2015-09-30
 description: "When using different font sizes throughout a design, you'll need to account for sidebearings to keep the type looking properly aligned."
 ---
