Update lead styles

--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -89,15 +89,15 @@
 
   .mbf--m
     margin-bottom: 0
-
-+respond-to($g-m)
-
   .mbm--m
     margin-bottom: $b-space
-  .mbl--m
-    margin-bottom: $b-space-l
   .mbxl--m
     margin-bottom: $b-space-xl
+
++respond-to($g-l)
+
+  .mbl_l
+    margin-bottom: $b-space-l
 
 // ----- Left ----- //
 
