--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -14,7 +14,7 @@
       .mv-g.mv-g--centered_l
         .mv-g-b.mv-g-b--4of5_m.mv-g-b--3of5_l
 
-          .mbl.tw7
+          .mbm.mbl_l.tw7
             = prevent_widow(page.description)
 
       .article
