--- a/source/index.haml
+++ b/source/index.haml
@@ -31,7 +31,7 @@ title: 'Web Typography'
 %section.row.mbm--m
   .cell.well.well--l
     .mv-g
-      .mv-g-b.mv-g-b--3of5_m
+      .mv-g-b.mv-g-b--3of5_m.mbl_M
         %h2.heading.heading--2 Latest post
 
         .has-manicule.mbl
@@ -59,7 +59,7 @@ title: 'Web Typography'
                   %time.tsi.tss= pretty_date(post.data.date)
 
       .mv-g-b.mv-g-b--2of5_m
-        .bdl2px.plm
+        .bdl2px_m.plm_m
           %h2.heading.heading--3.mbs Projects
 
           %ul.list.list--s.mbm
