Update Star Wars book count
Goddamn nerd.

--- a/source/about.haml
+++ b/source/about.haml
@@ -38,7 +38,7 @@ title: 'About'
             %h2.heading.heading--2.mbs.tsb How many Star Wars audiobooks do you own?
 
             %p.mbf
-              Six so far, and they're almost all on Sith Lords. It feels
+              Seven so far, and they're almost all on Sith Lords. It feels
               strange getting back into Star&nbsp;Wars after the whole prequel
               fiasco, but listening to the audiobooks has been <em>a lot</em>
               of fun.
