Update home page copy

--- a/source/index.haml
+++ b/source/index.haml
@@ -1,5 +1,5 @@
 ---
-description: 'John D. Jameson presents a bunch of blog posts on web typography.'
+description: 'John D. Jameson wrote a bunch of blog posts on web typography.'
 title: 'Web Typography'
 ---
 
@@ -14,7 +14,7 @@ title: 'Web Typography'
     %p.mbs.tsi.tsl.tac.tal_m
       John D. Jameson
       %span.c-red (me)
-      presents a&nbsp;bunch&nbsp;of&nbsp;blog&nbsp;posts&nbsp;on
+      wrote a&nbsp;bunch&nbsp;of&nbsp;blog&nbsp;posts&nbsp;on
 
     %h1.srt Web Typography
     = image_tag 'web-typography.svg', class: 'mv-heroTitle mbs w100p'
