Add Type Specimens to projects

--- a/source/index.haml
+++ b/source/index.haml
@@ -64,8 +64,12 @@ title: 'Web Typography'
 
           %ul.list.list--s.mbm
             %li.list-item
+              %p.mbf Type Specimens
+              = link_to 'typespecimens.io', links.typespecimens, class: 'link link--underlined tss'
+
+            %li.list-item
               %p.mbf Type Studies
-              = link_to 'typestudies.com', 'https://typestudies.com/', class: 'link link--underlined tss'
+              = link_to 'typestudies.com', links.typestudies, class: 'link link--underlined tss'
 
           %h2.heading.heading--3.mbs Cool People
 
